test/parser/positive/PrimitiveCasts.java
public class PrimitiveCasts {
  public PrimitiveCasts() {}
  public int m(byte x) {
    return (int)x;
  }
}
