test/parser/negative/FinalFormals.java
public class FinalFormals {
    public FinalFormals(){}
  public int m(final int x) {
    return x;
  }
}
